--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
+# DB Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/recipebookdb
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
 # App Properties
 RecipeBook.app.jwtSecret= RecipeBookSecretKey
 RecipeBook.app.jwtExpirationMs= 86400000
+
+# Multipart Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+RecipeBook.uploadDir=D:/Recipe Book/uploads/
