--- a/src/main/webapp/frontend/package.json
+++ b/src/main/webapp/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ashvin27/react-datatable": "^1.5.3",
+    "@babel/preset-react": "^7.13.13",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
