--- a/src/main/webapp/frontend/package.json
+++ b/src/main/webapp/frontend/package.json
@@ -21,6 +21,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.3",
     "react-tag-input": "^6.7.3",
     "react-validation": "^3.0.7",
     "styled-components": "^5.3.0",
