--- a/src/main/webapp/frontend/package.json
+++ b/src/main/webapp/frontend/package.json
@@ -18,7 +18,9 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-loader-spinner": "^4.0.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.3",
